Fix bar overlaping when resizing windows

--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ background-color: #212121
     margin: auto;
     width: 460px;
     height: 460px;
-    position: absolute;
+    position: relative;
     top: 0; left: 0; bottom: 0; right: 0;
     
 }
